--- a/css/styles.css
+++ b/css/styles.css
@@ -17,29 +17,56 @@
     height: 75px;
     width: 75px;
 }
-
+.headerWelcome{
+    position: relative;
+    text-align: center;
+    padding-top: 145px;
+    color: white;
+}
+.navBtn{
+    padding: 0.75rem;
+    font-family: "Montserrat", sans-serif;
+    font-size: 0.75rem;
+    color: #fff;
+    text-transform: uppercase;
+    background-color: #fed136;
+    border: 0;
+}
+.navBtn svg{
+    height: 12px;
+}
+.navbar{
+    
+    background-color: #212529;
+}
+@media (min-width: 992px){
+    .navbar {
+        background-color: transparent;
+    }
+}
+@media (min-width: 768px){
+    .headerWelcome{
+    padding-top: 225px;
+    }
+}
+.headerCoverContainer{
+    position: absolute;
+}
+.headerCoverImg{
+    width: 100%;
+    transform: scale(1.05);
+}
 .headerContainer{
     background-color: #212529;
 }
 .headerLogo{
     width: 190px;
 }
-.headerLogoContainer{
-}
-.headerNav{
-}
-.headerBtn{
-    position: absolute;
-    right: 225px;
-    top: 30px;
-}
 .headerNavItem{
     font-family: "Montserrat", sans-serif;
-    font-size: 0.95rem;
     color: #fff;
-    letter-spacing: 0.0625em;
     display: inline-block;
     position: relative;
     margin: 0px 0px;
-    padding: 10px 30px 0px 0px;
+    padding: 10px 20px 0px 0px;
 }
