alignment and position of various elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,15 +119,15 @@
     margin: 0px 0px;
     padding: 10px 20px 0px 0px;
 }
-.servicesContainer{
+.sectionContainer{
     margin-top: 96px;
     margin-bottom: 96px;
 }
-.servicesContainer h2{
+.sectionContainer h2{
     font-weight: 700;
     font-size: 40px;
 }
-.servicesContainer p{
+.sectionContainer p{
     font-weight: 400;
     font-size: 16px;
     font-style: italic;
@@ -155,6 +155,34 @@
     line-height: 1.75;
     font-style: normal;
 }
-.portfolioSection{
+.portfolioSection, .teamSection{
     background-color: #f8f9fa;
+}
+
+.teamProfilePic{
+    width: 224px;
+    height: 224px;
+    border-radius: 50%;
+    border: 7px rgba(0, 0, 0, 0.1) solid;
+}
+
+.aboutPic{
+    width: 136px;
+    height: 136px;
+    border-radius: 50%;
+    border: 7px #e9ecef solid;
+}
+.aboutPartStory{
+    background-color: #fed136;
+    color: #fff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.aboutPartStory p{
+    color: #fff;
+    margin: 30px 30px;
+    font-weight: 700;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
 }
