--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,23 @@
 .navbar{
     position: fixed;
     width: 100%;
-    padding-top: 25px;
+    padding: 24px 16px; 
     background-color: #212529;
 }
 @media (min-width: 992px){
     .navbar {
-        padding-top: 15px;
+        padding: 24px 16px;
         background-color: transparent;
     }
 }
 @media (min-width: 576px){
     .navbar {
-        padding: 15px 0px;
+        padding: 16px;
+    }
+}
+@media (max-width: 576px){
+    .navbar {
+        padding: 16px;
     }
 }
 .navBtn{
@@ -37,7 +42,7 @@
 .navBtn svg{
     height: 12px;
 }
-.headerNavItem{
+.navItem{
     font-family: "Montserrat", sans-serif;
     color: #fff;
     display: inline-block;
@@ -45,7 +50,14 @@
     margin: 0px 0px;
     padding: 10px 20px 0px 0px;
 }
-
+.navLogo{
+    width: 190px;
+}
+@media (max-width: 991px){
+    .navLogo{
+        width: 140px;
+    }
+}
 
 /*welcome section*/
 
@@ -105,14 +117,7 @@
 .headerContainer{
     background-color: #212529;
 }
-.headerLogo{
-    width: 190px;
-}
-@media (max-width: 992px){
-    .headerLogo{
-        width: 140px;
-    }
-}
+
 
 
 /*sections*/
@@ -197,6 +202,18 @@
 
 /*about section*/
 
+.aboutTimeline{
+    background: #e9ecef;
+    height: 1300px;
+    width: 2px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 130px;
+    left: 0px;
+    right: 0px;
+    z-index: -1;
+}
 .aboutLogoContainer{
     height: 125px;
     width: 125px;
